--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -2,31 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreatePostActivity">
 
     <EditText
+        android:id="@+id/postInput"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        app:layout_constraintRight_toRightOf="parant"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="16dp"
-        android:id="@+id/postInput"
-        android:hint="What's on your mind?"
-        android:inputType="textMultiLine"/>
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/postButton"
-        android:text="Post"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postInput"
-        android:layout_margin="16dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:hint="What do you want to talk about?"
+        android:gravity="top"
+        android:layout_margin="12dp"
+        android:padding="12dp"/>
 
+    <Button
+        android:layout_width="0dp"
+        android:id="@+id/postButton"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/postInput"
+        android:layout_margin="12dp"
+        android:text="POST"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
